v0.0.2c (2016/05/20) Fixes - Added some stuff to get the demo more cross-browser - Added missing pseudo-elements case in demo - Fixed some mistyped pseudo element classes, like "abs-left-top-before", which was not working... (sorry :|) - Added "!important" labels to force absalign rules to be used
Other
- Added the logo to the demo

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -13,8 +13,42 @@
     height: 50vw;
     max-height: 100px;
 
-    transition: ease 500ms;
-    transition-property: top, left, transform;
-
     background-color: #e85656;
+}
+
+.demo-block::before,
+.demo-block::after
+{
+    width: 10px;
+    height: 10px;
+
+    content: '';
+
+    background-color: #e0e0e0;
+}
+
+.demo-block,
+.demo-block::before,
+.demo-block::after
+{
+    -webkit-transition: ease 500ms;
+       -moz-transition: ease 500ms;
+         -o-transition: ease 500ms;
+            transition: ease 500ms;
+    -webkit-transition-property: top, left, -webkit-transform;
+       -moz-transition-property: top, left, -moz-transform;
+         -o-transition-property: top, left, -o-transform;
+            transition-property: top, left, transform, -webkit-transform;
+}
+
+img
+{
+    max-width: 100%;
+}
+
+.center-block
+{
+    display: block;
+
+    margin: 0 auto;
 }
